# ultron

./: .gitignore  CLAUDE.md  CLAUDE_PYTHON.md  JTDX_WEB_INTERFACE_README.md  OLLAMA_DXCC_GUIDE.md  README.md  README_OLLAMA_DXCC.md  README_PYTHON.md  REFACTORING_SUMMARY.md  ULTRON_AI_GUIDE.md  ULTRON_SMART_STARTUP_GUIDE.md  WHITELIST_AUTO_UPDATE_GUIDE.md  check_whitelist.php  connection_test.php  debug_ultron.py  diagnostic.py  dxcc_analyzer.php  dxcc_analyzer.py  dxcc_config.php  dxcc_config.py  dxcc_config_backup.php  dxcc_config_new.php  dxcc_notifier.php  dxcc_whitelist_10m.json  dxcc_whitelist_10m.json.backup.20251118054530  dxcc_whitelist_12m.json  dxcc_whitelist_20m.json  dxcc_whitelist_80m.json  dxcc_whitelist_80m.json.backup.20251118054530  dxcc_whitelist_config.json  dxcc_whitelist_global.json  dxcc_whitelist_global.json.backup.20251118054530  dxcc_whitelist_global.json.backup.20251118141051  dxcc_whitelist_guide.md  dxcc_worked_cache.json  generate_full_unworked_whitelist.php  generate_smart_whitelist.php  jtdx_api.php  jtdx_shared_data.json  jtdx_shared_data.php  (+45 more)
.github/workflows/: ci.yml  release.yml
examples/: rdma_ham_config.yaml
rdma/: CHANGELOG.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  pyproject.toml  setup.py
rdma/config/: rdma.yaml
rdma/examples/: ham_radio_example.py
rdma/src/rdma/: __init__.py  _version.py  agent.py  cli.py  config.py  exceptions.py  ham_radio.py  logging.py  monitoring.py  protocols.py  security.py  tasks.py
rdma/tests/: test_ham_radio.py
